<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FFFFFF"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingTop="50dp"
        android:paddingEnd="50dp"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/educonnect"
            app:srcCompat="@drawable/educonnect_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:text="@string/bienvenido"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/varela_round"
            android:text="@string/correo"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/correo"
                app:srcCompat="@drawable/emailicon" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/ingresa_tu_correo"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/varela_round"
                android:textColor="@color/black" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/password"
            android:fontFamily="@font/varela_round"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/password"
                app:srcCompat="@drawable/passwordicon" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/ingresa_tu_contrasenia"
                android:inputType="textPassword"
                android:fontFamily="@font/varela_round"
                android:textColor="@color/black" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_tienes_cuenta"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/varela_round"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/registrarseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/click_aca_para_registrarte"
                android:textAlignment="center"
                android:textColor="@color/ed_blue"
                android:textColorLink="@color/ed_blue"
                android:fontFamily="@font/varela_round"
                android:textSize="11sp" />
        </LinearLayout>

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#FEC203"
            android:text="@string/entrar"
            android:textColor="@color/white"
            android:textColorLink="#FEC203"
            android:textSize="20sp"
            android:fontFamily="@font/varela_round"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</LinearLayout>