<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"

    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingTop="50dp"
        android:paddingEnd="50dp"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/educonnect"
            app:srcCompat="@drawable/educonnect_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:text="@string/registrate"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:text="@string/yo_soy"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/docente_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="#FEC203"
                android:fontFamily="@font/varela_round"
                android:text="@string/docente"
                android:textColor="@color/white"
                android:textColorLink="#FEC203"
                android:textSize="11sp"
                style="?android:attr/buttonBarStyle"
                tools:ignore="MissingConstraints"
                android:focusable="true"
                android:clickable="true"/>

            <Button
                android:id="@+id/estudiante_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="#FEC203"
                android:fontFamily="@font/varela_round"
                android:text="@string/estudiante"
                android:textColor="@color/white"
                android:textColorLink="#FEC203"
                android:textSize="9sp"
                style="?android:attr/buttonBarStyle"
                tools:ignore="MissingConstraints"
                android:focusable="true"
                android:clickable="true"
                />

            <Button
                android:id="@+id/padre_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="#FEC203"
                android:fontFamily="@font/varela_round"
                android:text="@string/padre"
                android:textColor="@color/white"
                android:textColorLink="#FEC203"
                android:textSize="11sp"
                style="?android:attr/buttonBarStyle"
                tools:ignore="MissingConstraints"
                android:focusable="true"
                android:clickable="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/regresarInicio_btn"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FEC203"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/varela_round"
                android:text="@string/regresar_al_inicio"
                android:textColor="@color/white"
                android:textColorLink="#FEC203"
                android:textSize="12sp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

