<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpPadreView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"

    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingTop="50dp"
        android:paddingEnd="50dp"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/educonnect"
            app:srcCompat="@drawable/educonnect_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:text="@string/registrate"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:text="@string/yo_soy"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/padre_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="#FEC203"
                android:fontFamily="@font/varela_round"
                android:text="@string/padre"
                android:textColor="@color/white"
                android:textColorLink="#FEC203"
                android:textSize="11sp"
                style="?android:attr/buttonBarStyle"
                tools:ignore="MissingConstraints"
                android:focusable="true"
                android:clickable="true"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/varela_round"
            android:text="@string/nombre"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/NombreET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/nombre"
            android:textColorHint="@color/ed_gray"
            android:fontFamily="@font/varela_round"
            android:textSize="15sp"
            android:paddingHorizontal="15dp"
            android:autofillHints=""
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/varela_round"
            android:text="@string/correo"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/CorreoET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/correo"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/varela_round"
            android:textSize="15sp"
            android:paddingHorizontal="15dp"
            android:textColorHint="@color/ed_gray"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/varela_round"
            android:text="Número de Teléfono"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/telefonoContactoET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:hint="Numero de Telefono"
            android:fontFamily="@font/varela_round"
            android:textSize="15sp"
            android:paddingHorizontal="15dp"
            android:textColorHint="@color/ed_gray"
            android:autofillHints=""/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/varela_round"
            android:text="@string/password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/PasswordET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:fontFamily="@font/varela_round"
            android:textSize="15sp"
            android:paddingHorizontal="15dp"
            android:textColorHint="@color/ed_gray"
            android:autofillHints=""/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Direccion"/>

        <EditText
            android:id="@+id/direccionET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Direccion"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Parentesco"/>

        <EditText
            android:id="@+id/parentescoET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Parentesco"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/crearUsu_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#FEC203"
                android:fontFamily="@font/varela_round"
                android:text="@string/crear_usuario"
                android:textColor="@color/white"
                android:textColorLink="#FEC203"
                android:textSize="12sp"
                style="?android:attr/buttonBarStyle"
                tools:ignore="MissingConstraints"
                android:focusable="true"
                android:clickable="true"/>

            <Button
                android:id="@+id/regresarInicio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FEC203"
                android:fontFamily="@font/varela_round"
                android:text="@string/regresar_al_inicio"
                android:textColor="@color/white"
                android:textColorLink="#FEC203"
                android:textSize="12sp"
                style="?android:attr/buttonBarStyle"
                tools:ignore="MissingConstraints"
                android:focusable="true"
                android:clickable="true"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

